--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第7章 KVM内存管理高级技巧/1. 大页.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第7章 KVM内存管理高级技巧/1. 大页.md
@@ -3,38 +3,38 @@
 
 <!-- code_chunk_output -->
 
-* [1 大页的介绍](#1-大页的介绍)
-	* [1.1 大页的优点](#11-大页的优点)
-	* [1.2 内核的支持](#12-内核的支持)
-	* [1.3 系统大页信息查看](#13-系统大页信息查看)
-		* [1.3.1 /proc/meminfo](#131-procmeminfo)
-		* [1.3.2 /proc/sys/vm/下](#132-procsysvm下)
-		* [1.3.3 /sys/kernel/mm/hugepages/目录](#133-syskernelmmhugepages目录)
-* [2 KVM虚拟化对大页的利用](#2-kvm虚拟化对大页的利用)
-	* [2.1 一般应用程序使用大页的方式](#21-一般应用程序使用大页的方式)
-	* [2.2 KVM对大页的使用](#22-kvm对大页的使用)
-	* [2.3 KVM使用大页操作](#23-kvm使用大页操作)
-		* [2.3.1 检查硬件是否支持大页](#231-检查硬件是否支持大页)
-		* [2.3.2 检查系统是否支持hugetlbfs](#232-检查系统是否支持hugetlbfs)
-		* [2.3.3 检查大页池有足够大页](#233-检查大页池有足够大页)
-		* [2.3.4 创建hugetlbfs的挂载点](#234-创建hugetlbfs的挂载点)
-		* [2.3.5 创建客户机](#235-创建客户机)
-	* [2.4 2MB大页的相关命令](#24-2mb大页的相关命令)
-	* [2.5 大页的优缺点](#25-大页的优缺点)
+- [1. 大页的介绍](#1-大页的介绍)
+  - [1.1. 大页的优点](#11-大页的优点)
+  - [1.2. 内核的支持](#12-内核的支持)
+  - [1.3. 系统大页信息查看](#13-系统大页信息查看)
+    - [1.3.1. /proc/meminfo](#131-procmeminfo)
+    - [1.3.2. /proc/sys/vm/下](#132-procsysvm下)
+    - [1.3.3. /sys/kernel/mm/hugepages/目录](#133-syskernelmmhugepages目录)
+- [2. KVM虚拟化对大页的利用](#2-kvm虚拟化对大页的利用)
+  - [2.1. 一般应用程序使用大页的方式](#21-一般应用程序使用大页的方式)
+  - [2.2. KVM对大页的使用](#22-kvm对大页的使用)
+  - [2.3. KVM使用大页操作](#23-kvm使用大页操作)
+    - [2.3.1. 检查硬件是否支持大页](#231-检查硬件是否支持大页)
+    - [2.3.2. 检查系统是否支持hugetlbfs](#232-检查系统是否支持hugetlbfs)
+    - [2.3.3. 检查大页池有足够大页](#233-检查大页池有足够大页)
+    - [2.3.4. 创建hugetlbfs的挂载点](#234-创建hugetlbfs的挂载点)
+    - [2.3.5. 创建客户机](#235-创建客户机)
+  - [2.4. 2MB大页的相关命令](#24-2mb大页的相关命令)
+  - [2.5. 大页的优缺点](#25-大页的优缺点)
 
 <!-- /code_chunk_output -->
 
-# 1 大页的介绍
+# 1. 大页的介绍
 
 x86（包括x86\-32和x86\-64）架构的CPU**默认使用4KB大小的内存页面**，但是它们也支持较大的内存页，如x86\-64系统就支持2MB￼及1GB￼大小的大页（Huge Page）。Linux 2.6及以上的内核都支持Huge Page。
 
-## 1.1 大页的优点
+## 1.1. 大页的优点
 
 如果在系统中使用了Huge Page，则内存页的数量会减少，从而需要更少的页表（Page Table），节约了页表所占用的内存数量，并且所需的地址转换也减少了，TLB缓存失效的次数就减少了，从而提高了内存访问的性能。
 
 另外，由于**地址转换所需的信息**一般保存在**CPU的缓存**中，Huge Page的使用让**地址转换信息减少**，从而**减少了CPU缓存**的使用，**减轻了CPU缓存的压力**，让CPU缓存能**更多**地用于应用程序的**数据缓存**，也能够在整体上提升系统的性能。
 
-## 1.2 内核的支持
+## 1.2. 内核的支持
 
 **编译内核**时候，下面这些Config选项与Huge Page相关，需要在内核配置文件中使能。
 
@@ -65,11 +65,11 @@ BOOT_IMAGE=/vmlinuz-3.10.0-514.el7.x86_64 root=/dev/mapper/rhel-root ro crashker
 16
 ```
 
-## 1.3 系统大页信息查看
+## 1.3. 系统大页信息查看
 
 内核启动之后，**系统大页信息**主要从以下面几个**处查看与配置**。
 
-### 1.3.1 /proc/meminfo
+### 1.3.1. /proc/meminfo
 
 （1）/**proc/meminfo**里面的一些信息
 
@@ -88,7 +88,7 @@ HugePages_Surp:        0￼
 Hugepagesize:       2048 kB
 ```
 
-### 1.3.2 /proc/sys/vm/下
+### 1.3.2. /proc/sys/vm/下
 
 （2）/**proc/sys/vm**/下面的一些选项
 
@@ -121,7 +121,7 @@ Hugepagesize:       2048 kB
 
 - 而在**persistent hugepage**不够的时候，系统可以**向大页池中补充大页**，这些补充的大页由系统中**空闲且物理连续的小页**拼凑而来，最多允许拼凑**nr\_overcommit\_hugepages个大页**。当这些额外拼凑来的大页后来被释放出来的时候，它们又会**被解散成小页**，释放回**小页池**。
 
-### 1.3.3 /sys/kernel/mm/hugepages/目录
+### 1.3.3. /sys/kernel/mm/hugepages/目录
 
 （3）/sys/kernel/mm/hugepages/目录
 
@@ -170,9 +170,9 @@ drwxr-xr-x 2 root root 0 5月  21 10:13 hugepages-2048kB
 128
 ```
 
-# 2 KVM虚拟化对大页的利用
+# 2. KVM虚拟化对大页的利用
 
-## 2.1 一般应用程序使用大页的方式
+## 2.1. 一般应用程序使用大页的方式
 
 **操作系统**之上的**应用程序**（包括**QEMU创建的客户机**）要利用上**大页**，无非下面**3种途径**之一。
 
@@ -180,17 +180,17 @@ drwxr-xr-x 2 root root 0 5月  21 10:13 hugepages-2048kB
 - **shmget**系统调用使用**SHM\_HUGETLB flag**创建一段共享内存区。
 - 使用**hugetlbfs**创建一个**文件挂载点**，这个挂载目录之内的**文件**就都是**使用大页**的了￼。
 
-## 2.2 KVM对大页的使用
+## 2.2. KVM对大页的使用
 
 在**KVM虚拟化环境**中，就是使用**第3种方法**：创建**hugetlbfs的挂载点**，通过“\-**mem\-path FILE**”选项，让客户机使用宿主机的huge page挂载点作为它**内存的backend**。
 
 另外，还有一个参数“\-**mem\-prealloc**”是让宿主机在启动客户机时就**全部分配好客户机的内存**，而不是在客户机实际用到更多内存时才按需分配。\-**mem-prealloc**必须在有“\-**mem\-path**”参数时**才能使用**。提前分配好内存的好处是客户机的内存访问速度更快，缺点是客户机启动时就得到了所有的内存，从而使得宿主机的内存很快减少（而不是根据客户机的需求而动态地调整内存分配）。
 
-## 2.3 KVM使用大页操作
+## 2.3. KVM使用大页操作
 
 下面我们就以1GB大页为例（2MB的类似，读者自行实验），说明怎样让KVM客户机用上大页。因为RHEL 7.3自带的3.10内核mount \-t hugetlbfs \-o min\_size参数的要求，为了向读者展示它对reserve huge page的作用，本节使用较新的4.9.6内核。
 
-### 2.3.1 检查硬件是否支持大页
+### 2.3.1. 检查硬件是否支持大页
 
 1）检查**硬件是否支持大页**。检查方法如下：
 
@@ -200,7 +200,7 @@ drwxr-xr-x 2 root root 0 5月  21 10:13 hugepages-2048kB
 
 目前，几乎所有的Intel处理器都有上述对大页的硬件支持。如果没有硬件的支持，内核将无法使用大页。
 
-### 2.3.2 检查系统是否支持hugetlbfs
+### 2.3.2. 检查系统是否支持hugetlbfs
 
 2）检查**系统是否支持hugetlbfs**（7.1.1节提到的kernel Config选项要打开）。
 
@@ -211,7 +211,7 @@ nodev	hugetlbfs
 
 如果没有hugetlbfs的支持，虚拟机也是无法使用大页的。这时需要参照7.1.1节打开**内核选项**并**重新编译宿主机内核**并**重新启动**。
 
-### 2.3.3 检查大页池有足够大页
+### 2.3.3. 检查大页池有足够大页
 
 3）检查并确保**大页池（huge page pool）中有足够大页**，本例创建**16个1GB大页的pool**。
 
@@ -232,7 +232,7 @@ nodev	hugetlbfs
 16
 ```
 
-### 2.3.4 创建hugetlbfs的挂载点
+### 2.3.4. 创建hugetlbfs的挂载点
 
 4）创建**hugetlbfs的挂载点**。我们指定min\_size=4G，可以看到**大页池**里就给它**保留（reserve）了4个1GB大页**，虽然还没有正式分配出去。￼
 
@@ -252,7 +252,7 @@ nodev on /mnt/1G-hugepage type hugetlbfs (rw,relatime,pagesize=1G,size=8G,min_si
 4
 ```
 
-### 2.3.5 创建客户机
+### 2.3.5. 创建客户机
 
 5）**启动客户机**让其**使用hugepage的内存**，使用“\-mem\-path”“\-mem\-prealloc”参数。
 
@@ -273,7 +273,7 @@ nodev on /mnt/1G-hugepage type hugetlbfs (rw,relatime,pagesize=1G,size=8G,min_si
 
 至此，如果在客户机中运行的应用程序具备使用Huge Page的能力，那么就可以在客户机中使用Huge Page，从而带来性能的提升。
 
-## 2.4 2MB大页的相关命令
+## 2.4. 2MB大页的相关命令
 
 我们还可以同时创建**2MB大页池**，创建客户机，并故意给客户机分配内存大于池内persistent huge page数量而出现over commit的现象。
 
@@ -313,7 +313,7 @@ nodev on /mnt/1G-hugepage type hugetlbfs (rw,relatime,pagesize=1G,size=8G,min_si
 2048
 ```
 
-## 2.5 大页的优缺点
+## 2.5. 大页的优缺点
 
 总的来说，对于内存访问密集型的应用，在KVM客户机中使用Huge Page是可以较明显地提高客户机性能的。
 
