--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
+++ b/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
@@ -396,202 +396,269 @@ struct kvm_run {
 
 ```cpp
 struct kvm_vcpu_arch {
-    /*
-     * rip and regs accesses must go through
-     * kvm_{register,rip}_{read,write} functions.
-     */
-    unsigned long regs[NR_VCPU_REGS];
-    u32 regs_avail;
-    u32 regs_dirty;
-    //类似这些寄存器就是就是用来缓存真正的CPU值的
-    unsigned long cr0;
-    unsigned long cr0_guest_owned_bits;
-    unsigned long cr2;
-    unsigned long cr3;
-    unsigned long cr4;
-    unsigned long cr4_guest_owned_bits;
-    unsigned long cr8;
-    u32 hflags;
-    u64 efer;
-    u64 apic_base;
-    struct kvm_lapic *apic;    /* kernel irqchip context */
-    unsigned long apic_attention;
-    int32_t apic_arb_prio;
-    int mp_state;
-    u64 ia32_misc_enable_msr;
-    bool tpr_access_reporting;
-    u64 ia32_xss;
- 
-    /*
-     * Paging state of the vcpu
-     *
-     * If the vcpu runs in guest mode with two level paging this still saves
-     * the paging mode of the l1 guest. This context is always used to
-     * handle faults.
-     */
-    //内存管理，更多的是附带了直接操作函数
-    struct kvm_mmu mmu; 
- 
-    /*
-     * Paging state of an L2 guest (used for nested npt)
-     *
-     * This context will save all necessary information to walk page tables
-     * of the an L2 guest. This context is only initialized for page table
-     * walking and not for faulting since we never handle l2 page faults on
-     * the host.
-     */
-    struct kvm_mmu nested_mmu;
- 
-    /*
-     * Pointer to the mmu context currently used for
-     * gva_to_gpa translations.
-     */
-    struct kvm_mmu *walk_mmu;
-    // 反向映射
-    struct kvm_mmu_memory_cache mmu_pte_list_desc_cache;
-    struct kvm_mmu_memory_cache mmu_page_cache;
-    struct kvm_mmu_memory_cache mmu_page_header_cache;
- 
-    struct fpu guest_fpu;
-    u64 xcr0;
-    u64 guest_supported_xcr0;
-    u32 guest_xstate_size;
- 
-    struct kvm_pio_request pio;
-    void *pio_data;
- 
-    u8 event_exit_inst_len;
- 
-    struct kvm_queued_exception {
-        bool pending;
-        bool has_error_code;
-        bool reinject;
-        u8 nr;
-        u32 error_code;
-    } exception;
- 
-    struct kvm_queued_interrupt {
-        bool pending;
-        bool soft;
-        u8 nr;
-    } interrupt;
- 
-    int halt_request; /* real mode on Intel only */
- 
-    int cpuid_nent;
-    struct kvm_cpuid_entry2 cpuid_entries[KVM_MAX_CPUID_ENTRIES];
- 
-    int maxphyaddr;
- 
-    /* emulate context */
-    //下面是KVM的软件模拟模式，也就是没有vmx的情况，估计也没人用这一套
-    struct x86_emulate_ctxt emulate_ctxt;
-    bool emulate_regs_need_sync_to_vcpu;
-    bool emulate_regs_need_sync_from_vcpu;
-    int (*complete_userspace_io)(struct kvm_vcpu *vcpu);
- 
-    gpa_t time;
-    struct pvclock_vcpu_time_info hv_clock;
-    unsigned int hw_tsc_khz;
-    struct gfn_to_hva_cache pv_time;
-    bool pv_time_enabled;
-    /* set guest stopped flag in pvclock flags field */
-    bool pvclock_set_guest_stopped_request;
- 
-    struct {
-        u64 msr_val;
-        u64 last_steal;
-        u64 accum_steal;
-        struct gfn_to_hva_cache stime;
-        struct kvm_steal_time steal;
-    } st;
- 
-    u64 last_guest_tsc;
-    u64 last_host_tsc;
-    u64 tsc_offset_adjustment;
-    u64 this_tsc_nsec;
-    u64 this_tsc_write;
-    u64 this_tsc_generation;
-    bool tsc_catchup;
-    bool tsc_always_catchup;
-    s8 virtual_tsc_shift;
-    u32 virtual_tsc_mult;
-    u32 virtual_tsc_khz;
-    s64 ia32_tsc_adjust_msr;
- 
-    atomic_t nmi_queued;  /* unprocessed asynchronous NMIs */
-    unsigned nmi_pending; /* NMI queued after currently running handler */
-    bool nmi_injected;    /* Trying to inject an NMI this entry */
- 
-    struct mtrr_state_type mtrr_state;
-    u64 pat;
- 
-    unsigned switch_db_regs;
-    unsigned long db[KVM_NR_DB_REGS];
-    unsigned long dr6;
-    unsigned long dr7;
-    unsigned long eff_db[KVM_NR_DB_REGS];
-    unsigned long guest_debug_dr7;
- 
-    u64 mcg_cap;
-    u64 mcg_status;
-    u64 mcg_ctl;
-    u64 *mce_banks;
- 
-    /* Cache MMIO info */
-    u64 mmio_gva;
-    unsigned access;
-    gfn_t mmio_gfn;
-    u64 mmio_gen;
- 
-    struct kvm_pmu pmu;
- 
-    /* used for guest single stepping over the given code position */
-    unsigned long singlestep_rip;
- 
-    /* fields used by HYPER-V emulation */
-    u64 hv_vapic;
- 
-    cpumask_var_t wbinvd_dirty_mask;
- 
-    unsigned long last_retry_eip;
-    unsigned long last_retry_addr;
- 
-    struct {
-        bool halted;
-        gfn_t gfns[roundup_pow_of_two(ASYNC_PF_PER_VCPU)];
-        struct gfn_to_hva_cache data;
-        u64 msr_val;
-        u32 id;
-        bool send_user_only;
-    } apf;
- 
-    /* OSVW MSRs (AMD only) */
-    struct {
-        u64 length;
-        u64 status;
-    } osvw;
- 
-    struct {
-        u64 msr_val;
-        struct gfn_to_hva_cache data;
-    } pv_eoi;
- 
-    /*
-     * Indicate whether the access faults on its page table in guest
-     * which is set when fix page fault and used to detect unhandeable
-     * instruction.
-     */
-    bool write_fault_to_shadow_pgtable;
- 
-    /* set at EPT violation at this point */
-    unsigned long exit_qualification;
- 
-    // 不支持VMX下的模拟虚拟化
-    /* pv related host specific info */
-    struct {
-        bool pv_unhalted;
-    } pv;
+        /*
+         * rip and regs accesses must go through
+         * kvm_{register,rip}_{read,write} functions.
+         */
+        unsigned long regs[NR_VCPU_REGS];
+        u32 regs_avail;
+        u32 regs_dirty;
+        //类似这些寄存器就是就是用来缓存真正的CPU值的
+        unsigned long cr0;
+        unsigned long cr0_guest_owned_bits;
+        unsigned long cr2;
+        unsigned long cr3;
+        unsigned long cr4;
+        unsigned long cr4_guest_owned_bits;
+        unsigned long cr8;
+        u32 pkru;
+        u32 hflags;
+        u64 efer;
+        u64 apic_base;
+        struct kvm_lapic *apic;    /* kernel irqchip context */
+        bool apicv_active;
+        bool load_eoi_exitmap_pending;
+        DECLARE_BITMAP(ioapic_handled_vectors, 256);
+        unsigned long apic_attention;
+        int32_t apic_arb_prio;
+        int mp_state;
+        u64 ia32_misc_enable_msr;
+        u64 smbase;
+        u64 smi_count;
+        bool tpr_access_reporting;
+        bool xsaves_enabled;
+        u64 ia32_xss;
+        u64 microcode_version;
+        u64 arch_capabilities;
+
+        /*
+         * Paging state of the vcpu
+         *
+         * If the vcpu runs in guest mode with two level paging this still saves
+         * the paging mode of the l1 guest. This context is always used to
+         * handle faults.
+         */
+        // 直接操作函数
+        struct kvm_mmu *mmu;
+
+        /* Non-nested MMU for L1 */
+        // 非嵌套情况下的虚拟机 mmu
+        struct kvm_mmu root_mmu;
+
+        /* L1 MMU when running nested */
+        // 嵌套情况下的 L1 的mmu
+        struct kvm_mmu guest_mmu;
+
+        /*
+         * Paging state of an L2 guest (used for nested npt)
+         *
+         * This context will save all necessary information to walk page tables
+         * of an L2 guest. This context is only initialized for page table
+         * walking and not for faulting since we never handle l2 page faults on
+         * the host.
+         */
+        // 
+        struct kvm_mmu nested_mmu;
+
+        /*
+         * Pointer to the mmu context currently used for
+         * gva_to_gpa translations.
+         */
+        // 用于 GVA 转换成 GPA
+        struct kvm_mmu *walk_mmu;
+
+        struct kvm_mmu_memory_cache mmu_pte_list_desc_cache;
+        struct kvm_mmu_memory_cache mmu_page_cache;
+        struct kvm_mmu_memory_cache mmu_page_header_cache;
+
+        /*
+         * QEMU userspace and the guest each have their own FPU state.
+         * In vcpu_run, we switch between the user and guest FPU contexts.
+         * While running a VCPU, the VCPU thread will have the guest FPU
+         * context.
+         *
+         * Note that while the PKRU state lives inside the fpu registers,
+         * it is switched out separately at VMENTER and VMEXIT time. The
+         * "guest_fpu" state here contains the guest FPU context, with the
+         * host PRKU bits.
+         */
+        struct fpu *user_fpu;
+        struct fpu *guest_fpu;
+
+        u64 xcr0;
+        u64 guest_supported_xcr0;
+        u32 guest_xstate_size;
+
+        struct kvm_pio_request pio;
+        void *pio_data;
+
+        u8 event_exit_inst_len;
+
+        struct kvm_queued_exception {
+                bool pending;
+                bool injected;
+                bool has_error_code;
+                u8 nr;
+                u32 error_code;
+                unsigned long payload;
+                bool has_payload;
+                u8 nested_apf;
+        } exception;
+
+        struct kvm_queued_interrupt {
+                bool injected;
+                bool soft;
+                u8 nr;
+        } interrupt;
+
+        int halt_request; /* real mode on Intel only */
+
+        int cpuid_nent;
+        struct kvm_cpuid_entry2 cpuid_entries[KVM_MAX_CPUID_ENTRIES];
+
+        int maxphyaddr;
+
+        /* emulate context */
+        // 下面是KVM的软件模拟模式，也就是没有vmx的情况，估计也没人用这一套
+        struct x86_emulate_ctxt *emulate_ctxt;
+        bool emulate_regs_need_sync_to_vcpu;
+        bool emulate_regs_need_sync_from_vcpu;
+        int (*complete_userspace_io)(struct kvm_vcpu *vcpu);
+
+        gpa_t time;
+        struct pvclock_vcpu_time_info hv_clock;
+        unsigned int hw_tsc_khz;
+        struct gfn_to_hva_cache pv_time;
+        bool pv_time_enabled;
+        /* set guest stopped flag in pvclock flags field */
+        bool pvclock_set_guest_stopped_request;
+
+        struct {
+                u8 preempted;
+                u64 msr_val;
+                u64 last_steal;
+                struct gfn_to_pfn_cache cache;
+        } st;
+
+        u64 tsc_offset;
+        u64 last_guest_tsc;
+        u64 last_host_tsc;
+        u64 tsc_offset_adjustment;
+        u64 this_tsc_nsec;
+        u64 this_tsc_write;
+        u64 this_tsc_generation;
+        bool tsc_catchup;
+        bool tsc_always_catchup;
+        s8 virtual_tsc_shift;
+        u32 virtual_tsc_mult;
+        u32 virtual_tsc_khz;
+        s64 ia32_tsc_adjust_msr;
+        u64 msr_ia32_power_ctl;
+        u64 tsc_scaling_ratio;
+
+        atomic_t nmi_queued;  /* unprocessed asynchronous NMIs */
+        unsigned nmi_pending; /* NMI queued after currently running handler */
+        bool nmi_injected;    /* Trying to inject an NMI this entry */
+        bool smi_pending;    /* SMI queued after currently running handler */
+
+        struct kvm_mtrr mtrr_state;
+        u64 pat;
+
+        unsigned switch_db_regs;
+        unsigned long db[KVM_NR_DB_REGS];
+        unsigned long dr6;
+        unsigned long dr7;
+        unsigned long eff_db[KVM_NR_DB_REGS];
+        unsigned long guest_debug_dr7;
+        u64 msr_platform_info;
+        u64 msr_misc_features_enables;
+
+        u64 mcg_cap;
+        u64 mcg_status;
+        u64 mcg_ctl;
+        u64 mcg_ext_ctl;
+        u64 *mce_banks;
+
+        /* Cache MMIO info */
+        u64 mmio_gva;
+        unsigned mmio_access;
+        gfn_t mmio_gfn;
+        u64 mmio_gen;
+
+        struct kvm_pmu pmu;
+
+        /* used for guest single stepping over the given code position */
+        unsigned long singlestep_rip;
+
+        struct kvm_vcpu_hv hyperv;
+
+        cpumask_var_t wbinvd_dirty_mask;
+
+        unsigned long last_retry_eip;
+        unsigned long last_retry_addr;
+
+        struct {
+                bool halted;
+                gfn_t gfns[roundup_pow_of_two(ASYNC_PF_PER_VCPU)];
+                struct gfn_to_hva_cache data;
+                u64 msr_val;
+                u32 id;
+                bool send_user_only;
+                u32 host_apf_reason;
+                unsigned long nested_apf_token;
+                bool delivery_as_pf_vmexit;
+        } apf;
+
+        /* OSVW MSRs (AMD only) */
+        struct {
+                u64 length;
+                u64 status;
+        } osvw;
+
+        struct {
+                u64 msr_val;
+                struct gfn_to_hva_cache data;
+        } pv_eoi;
+
+        u64 msr_kvm_poll_control;
+
+        /*
+         * Indicates the guest is trying to write a gfn that contains one or
+         * more of the PTEs used to translate the write itself, i.e. the access
+         * is changing its own translation in the guest page tables.  KVM exits
+         * to userspace if emulation of the faulting instruction fails and this
+         * flag is set, as KVM cannot make forward progress.
+         *
+         * If emulation fails for a write to guest page tables, KVM unprotects
+         * (zaps) the shadow page for the target gfn and resumes the guest to
+         * retry the non-emulatable instruction (on hardware).  Unprotecting the
+         * gfn doesn't allow forward progress for a self-changing access because
+         * doing so also zaps the translation for the gfn, i.e. retrying the
+         * instruction will hit a !PRESENT fault, which results in a new shadow
+         * page and sends KVM back to square one.
+         */
+        bool write_fault_to_shadow_pgtable;
+
+        /* set at EPT violation at this point */
+        unsigned long exit_qualification;
+
+        /* pv related host specific info */
+        // 不支持VMX下的模拟虚拟化
+        struct {
+                bool pv_unhalted;
+        } pv;
+
+        int pending_ioapic_eoi;
+        int pending_external_vector;
+
+        /* be preempted when it's in kernel-mode(cpl=0) */
+        bool preempted_in_kernel;
+
+        /* Flush the L1 Data cache for L1TF mitigation on VMENTER */
+        bool l1tf_flush_l1d;
+
+        /* AMD MSRC001_0015 Hardware Configuration */
+        u64 msr_hwcr;
 };
 ```
 
