--- a/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
@@ -5,10 +5,10 @@
 
 - [1. 概述](#1-概述)
 - [2. 客户机物理地址空间](#2-客户机物理地址空间)
-- [3. 影子页表](#3-影子页表)
-  - [3.1. 影子页表异常处理机制](#31-影子页表异常处理机制)
-- [4. EPT页表](#4-ept页表)
-- [相关概念](#相关概念)
+- [3. 地址转换过程](#3-地址转换过程)
+- [4. 影子页表](#4-影子页表)
+  - [4.1. 影子页表异常处理机制](#41-影子页表异常处理机制)
+- [5. EPT页表](#5-ept页表)
 
 <!-- /code_chunk_output -->
 
@@ -36,13 +36,15 @@
 
 其二是基于**硬件对虚拟化**的支持，来实现两者之间的转换。下面就详细阐述两种方法在 KVM 上的具体实现。
 
-# 3. 影子页表
+# 3. 地址转换过程
 
 由于**宿主机MMU不能直接装载客户机的页表！！！**来进行**内存访问**，所以当**客户机**访问**宿主机物理内存**时，需要经过**多次地址转换**。
 
 也即**首先**根据**客户机页表**把**客户机虚拟地址**转传成**客户机物理地址**，然后再通过**客户机物理地址**到**宿主机虚拟地址**之间的映射转换成**宿主机虚拟地址**，最后再根据**宿主机页表**把宿主机虚拟地址转换成宿主机物理地址。
 
-注意: **客户机页表基地址(即客户机CR3**)是**客户机物理地址**, 当加载CR3时可以直接通过**kvm\_memory\_slot**进行转换成宿主机虚拟地址, 然后在宿主机进行页表转换, 得到客户机页表基地址的真实物理地址.
+注意: **客户机页表基地址(即客户机CR3**)是**客户机物理地址**, 当加载CR3时可以直接通过**kvm\_memory\_slot**进行转换成**宿主机虚拟地址**, 然后**在宿主机进行页表转换**, 得到**客户机页表基地**址的**真实物理地址**.
+
+# 4. 影子页表
 
 而通过影子页表，则可以实现客户机虚拟地址到宿主机物理地址的直接转换。如下图所示：
 
@@ -64,7 +66,7 @@
 
 当**客户机切换进程**时，**客户机操作系统**会把**待切换进程的页表基址载入 CR3**，而 KVM 将会**截获这一特权指令**，进行新的处理，也即在**哈希表**中找到与**此页表基址**对应的**影子页表基址**，载入**客户机 CR3**，使**客户机在恢复运行**时 CR3 实际指向的是**新切换进程对应的影子页表**。
 
-## 3.1. 影子页表异常处理机制
+## 4.1. 影子页表异常处理机制
 
 在通过**影子页表**进行**寻址**的过程中，有**两种原因**会引起**影子页表的缺页异常**，一种是由**客户机本身所引起的缺页异常**，具体来说就是客户机所访问的**客户机页表项存在位 (Present Bit) 为 0**，或者写一个**只读的客户机物理页**，再者所访问的**客户机虚拟地址无效**等。另一种异常是由**客户机页表**和**影子页表不一致**引起的异常。
 
@@ -78,7 +80,7 @@
 
 因此，Intel 的 EPT(Extent Page Table) 技术和 AMD 的 NPT(Nest Page Table) 技术都对内存虚拟化提供了硬件支持。这两种技术原理类似，都是在**硬件层面**上实现客户机虚拟地址到宿主机物理地址之间的转换。下面就以 EPT 为例分析一下 KVM 基于硬件辅助的内存虚拟化实现。
 
-# 4. EPT页表
+# 5. EPT页表
 
 EPT 技术在**原有客户机页表**对**客户机虚拟地址**到**客户机物理地址映射**的基础上，又引入了 **EPT 页表**来实现**客户机物理地址**到**宿主机物理地址**的另一次映射，这**两次地址映射**都是由**硬件自动完成**。
 
@@ -91,16 +93,3 @@ EPT 技术在**原有客户机页表**对**客户机虚拟地址**到**客户机
 对于 **EPT 缺页异常**，KVM 首先根据**引起异常的客户机物理地址**，映射到**对应的宿主机虚拟地址！！！**，然后**为此虚拟地址分配新的物理页**，最后 **KVM 再更新 EPT 页表**，建立起引起**异常的客户机物理地址**到**宿主机物理地址**之间的映射。对 **EPT 写权限**引起的异常，KVM 则通过**更新相应的 EPT 页表**来解决。
 
 由此可以看出，**EPT 页表**相对于前述的影子页表，其实现方式大大简化。而且，由于**客户机内部的缺页异常**也**不会致使客户机退出**，因此**提高了客户机运行的性能**。此外，KVM 只需为**每个客户机**维护**一套 EPT 页表**，也大大**减少了内存的额外开销**。
-
-# 相关概念
-
-* GVA - Guest Virtual Address，虚拟机的虚拟地址
-* GPA - Guest Physical Address，虚拟机的物理地址
-* GFN - Guest Frame Number，虚拟机的页框号
-* HVA - Host Virtual Address，宿主机虚拟地址，也就是对应Qemu中申请的地址
-* HPA - Host Physical Address，宿主机物理地址
-* HFN - Host Frame Number，宿主机的页框号 
-* PFN - host page frame number, 宿主页框号
-* PTE - page table entry，通用来指代页结构项
-* tdp - two dimentional paging（供应商中立术语，二维分页, 可以是NPT和EPT）
-* spte - shadow page table entry
