--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -3,17 +3,36 @@
 
 <!-- code_chunk_output -->
 
-- [1. kvm中与内存有关的成员](#1-kvm中与内存有关的成员)
-- [2. kvm_memslots: 虚拟机所有slot信息](#2-kvm_memslots-虚拟机所有slot信息)
-- [3. kvm_mem_slot 结构体: 一个代表一段空间, 虚拟机GPA到主机HVA的映射关系](#3-kvm_mem_slot-结构体-一个代表一段空间-虚拟机gpa到主机hva的映射关系)
-- [4. kvm_mmu 结构体:](#4-kvm_mmu-结构体)
-  - [4.1. 与kvm_vcpu, kvm_vcpu_arch之间的关系](#41-与kvm_vcpu-kvm_vcpu_arch之间的关系)
-  - [4.2. kvm_mmu 定义: mmu的操作函数](#42-kvm_mmu-定义-mmu的操作函数)
-  - [kvm_mmu_page: 页表结构](#kvm_mmu_page-页表结构)
+- [1. 几个缩写](#1-几个缩写)
+- [2. kvm中与内存有关的成员](#2-kvm中与内存有关的成员)
+- [3. kvm_memslots: 虚拟机所有slot信息](#3-kvm_memslots-虚拟机所有slot信息)
+- [4. kvm_mem_slot 结构体: 一个代表一段空间, 虚拟机GPA到主机HVA的映射关系](#4-kvm_mem_slot-结构体-一个代表一段空间-虚拟机gpa到主机hva的映射关系)
+- [5. kvm_mmu 结构体:](#5-kvm_mmu-结构体)
+  - [5.1. 与kvm_vcpu, kvm_vcpu_arch之间的关系](#51-与kvm_vcpu-kvm_vcpu_arch之间的关系)
+  - [5.2. kvm_mmu 定义: mmu的操作函数](#52-kvm_mmu-定义-mmu的操作函数)
+  - [5.3. kvm_mmu_page: 页表结构](#53-kvm_mmu_page-页表结构)
 
 <!-- /code_chunk_output -->
 
-# 1. kvm中与内存有关的成员
+# 1. 几个缩写
+
+* GVA - Guest Virtual Address，虚拟机的虚拟地址
+* GPA - Guest Physical Address，虚拟机的物理地址
+* GFN - Guest Frame Number，虚拟机的页框号
+* HVA - Host Virtual Address，宿主机虚拟地址，也就是对应Qemu中申请的地址
+* HPA - Host Physical Address，宿主机物理地址
+* HFN - Host Frame Number，宿主机的页框号 
+* PFN - host page frame number, 宿主页框号
+* PTE - page table entry，页表项，指向下一级页表或者页的物理地址，以及相应的权限位
+* GPTE - guest pte，客户机页表项，指向GPT中下一级页表或者页的gpa，以及相应的权限位
+* TDP - two dimentional paging（二维分页, 可以是NPT和EPT）
+* SPTE - shadow page table entry, 影子页表项，也就是EPT页表项，指向EPT中下一级页表或者页的hpa，以及相应的权限位
+
+以上唯一需要解释的是spte，在这里被叫做**shadow pte**，如果不了解的话，会很容易和以前的shadow paging机制搞混。
+
+KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（shadow page table）机制，为了**和之前的代码兼容**，在当前的实现中，**EPT机制**是在**影子页表机制代码**的基础上实现的，所以**EPT**里面的**pte**和之前一样被叫做 `shadow pte`，这个会在之后进行详细的说明。
+
+# 2. kvm中与内存有关的成员
 
 ```cpp
 // include/linux/kvm_host.h
@@ -30,7 +49,7 @@ struct kvm {
 
 其中`address_space_id = mem->slot >> 16;`, 详细见`虚拟机物理内存注册`.
 
-# 2. kvm_memslots: 虚拟机所有slot信息
+# 3. kvm_memslots: 虚拟机所有slot信息
 
 一个`struct kvm`代表一个虚拟机, memslots是该虚拟机所有内存条, 注意最大`KVM_ADDRESS_SPACE_NUM`(这里是1), 用于将**GPA转换为HVA**. 
 
@@ -91,7 +110,7 @@ static struct kvm_memslots *kvm_alloc_memslots(void)
 }
 ```
 
-# 3. kvm_mem_slot 结构体: 一个代表一段空间, 虚拟机GPA到主机HVA的映射关系
+# 4. kvm_mem_slot 结构体: 一个代表一段空间, 虚拟机GPA到主机HVA的映射关系
 
 由于**GPA不能直接用于物理 MMU 进行寻址！！！**，所以需要**将GPA转换为HVA**，kvm中利用 `kvm_memory_slot` 数据结构来记录**每一个地址区间**(**Guest中的物理地址区间**)中**GPA与HVA**的**映射关系**.
 
@@ -152,9 +171,9 @@ struct kvm_memory_slot {
 
 至于`kvm_userspace_memory_region`可以看qemu部分
 
-# 4. kvm_mmu 结构体:
+# 5. kvm_mmu 结构体:
 
-## 4.1. 与kvm_vcpu, kvm_vcpu_arch之间的关系
+## 5.1. 与kvm_vcpu, kvm_vcpu_arch之间的关系
 
 ![2020-03-20-10-46-36.png](./images/2020-03-20-10-46-36.png)
 
@@ -164,37 +183,48 @@ vcpu->arch中与MMU相关的结构：
 
 ```cpp
 struct kvm_vcpu_arch {
-    ......
-    /*
-     * Paging state of the vcpu
-     *
-     * If the vcpu runs in guest mode with two level paging this still saves
-     * the paging mode of the l1 guest. This context is always used to
-     * handle faults.
-     */
-    //内存管理，更多的是附带了直接操作函数
-    struct kvm_mmu mmu; 
+        ......
+        /*
+        * Paging state of the vcpu
+        *
+        * If the vcpu runs in guest mode with two level paging this still saves
+        * the paging mode of the l1 guest. This context is always used to
+        * handle faults.
+        */
+        // vcpu以两级页表运行在guest模式下, 这里仍然保存L1虚拟机的页表
+        // 这个用于处理异常
+        struct kvm_mmu *mmu;
+
+        /* Non-nested MMU for L1 */
+        // 非嵌套情况下的虚拟机 mmu
+        struct kvm_mmu root_mmu;
+
+        /* L1 MMU when running nested */
+        // 嵌套情况下的 L1 的mmu
+        struct kvm_mmu guest_mmu;
+
+        /*
+         * Paging state of an L2 guest (used for nested npt)
+         *
+         * This context will save all necessary information to walk page tables
+         * of an L2 guest. This context is only initialized for page table
+         * walking and not for faulting since we never handle l2 page faults on
+         * the host.
+         */
+        // 
+        struct kvm_mmu nested_mmu;
+
+        /*
+         * Pointer to the mmu context currently used for
+         * gva_to_gpa translations.
+         */
+        // 用于 GVA 转换成 GPA
+        struct kvm_mmu *walk_mmu;
  
-    /*
-     * Paging state of an L2 guest (used for nested npt)
-     *
-     * This context will save all necessary information to walk page tables
-     * of the an L2 guest. This context is only initialized for page table
-     * walking and not for faulting since we never handle l2 page faults on
-     * the host.
-     */
-    struct kvm_mmu nested_mmu;
- 
-    /*
-     * Pointer to the mmu context currently used for
-     * gva_to_gpa translations.
-     */
-    struct kvm_mmu *walk_mmu;
- 
-    struct kvm_mmu_memory_cache mmu_pte_list_desc_cache;
-    struct kvm_mmu_memory_cache mmu_page_cache;
-    struct kvm_mmu_memory_cache mmu_page_header_cache;
-    ......
+        struct kvm_mmu_memory_cache mmu_pte_list_desc_cache;
+        struct kvm_mmu_memory_cache mmu_page_cache;
+        struct kvm_mmu_memory_cache mmu_page_header_cache;
+        ......
 ```
 
 注释已经很清楚了，我就不做过多的解释了，说一下三个cache：
@@ -233,7 +263,7 @@ static int mmu_topup_memory_cache(struct kvm_mmu_memory_cache *cache,
 
 
 
-## 4.2. kvm_mmu 定义: mmu的操作函数
+## 5.2. kvm_mmu 定义: mmu的操作函数
 
 ```cpp
 /*
@@ -249,6 +279,7 @@ struct kvm_mmu {
                           bool prefault);
         void (*inject_page_fault)(struct kvm_vcpu *vcpu,
                                   struct x86_exception *fault);
+        // 
         gpa_t (*gva_to_gpa)(struct kvm_vcpu *vcpu, gpa_t gva_or_gpa,
                             u32 access, struct x86_exception *exception);
         gpa_t (*translate_gpa)(struct kvm_vcpu *vcpu, gpa_t gpa, u32 access,
@@ -258,9 +289,9 @@ struct kvm_mmu {
         void (*invlpg)(struct kvm_vcpu *vcpu, gva_t gva, hpa_t root_hpa);
         void (*update_pte)(struct kvm_vcpu *vcpu, struct kvm_mmu_page *sp,
                            u64 *spte, const void *pte);
-        // 存储paging structure中根目录的结构(如EPT中的EPTP), 这是HPA
+        // 存储paging structure中根目录的地址(如EPT中的EPTP), 这是HPA
         hpa_t root_hpa;
-        // 
+        // 虚拟机本身页表的cr3地址, GPA
         gpa_t root_cr3;
         // 创建 mmu 页面时候使用的基本的 page role
         union kvm_mmu_role mmu_role;
@@ -378,7 +409,7 @@ union kvm_mmu_page_role {
 };
 ```
 
-## kvm_mmu_page: 页表结构
+## 5.3. kvm_mmu_page: 页表结构
 
 kvm_mmu_page结构是KVM MMU中最重要的结构之一，其存储了KVM MMU页表的结构
 
