--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -9,7 +9,7 @@
   - [3.1. 相关变量初始化: kvm模块初始化时](#31-相关变量初始化-kvm模块初始化时)
   - [3.2. MMU相关操作函数初始化: vcpu创建时](#32-mmu相关操作函数初始化-vcpu创建时)
     - [3.2.1. MMU的创建](#321-mmu的创建)
-    - [3.2.2. MMU的初始化: 回调函数初始化](#322-mmu的初始化-回调函数初始化)
+    - [3.2.2. MMU的初始化: vcpu->arch.mmu](#322-mmu的初始化-vcpu-archmmu)
 - [4. 虚拟机的物理内存组织方式](#4-虚拟机的物理内存组织方式)
 - [5. EPT寻址过程](#5-ept寻址过程)
 - [6. 参考](#6-参考)
@@ -43,13 +43,16 @@
 1、其实这里我们只需要知道PML4 entry的`12-51`位记录下一级页表的地址，而这40位肯定是用不完的，根据CPU的架构，采取不同的位数，具体如下：
 
 在Intel中使用MAXPHYADDR来表示最大的物理地址，我们可以通过CPUID的指令来获得处理支持的最大物理地址，然而这已经不在此次的讨论范围之内，我们需要知道的只是：
-当MAXPHYADDR 为36位，在Intel平台的桌面处理器上普遍实现了36位的最高物理地址值，也就是我们普通的个人计算机，可寻址64G空间；
-当MAXPHYADDR 为40位，在Inter的服务器产品和AMD 的平台上普遍实现40位的最高物理地址，可寻址达1TB；
-当MAXPHYADDR为52位，这是x64体系结构描述最高实现值，目前尚未有处理器实现。
+- 当MAXPHYADDR 为36位，在Intel平台的桌面处理器上普遍实现了36位的最高物理地址值，也就是我们普通的个人计算机，可寻址64G空间；
+- 当MAXPHYADDR 为40位，在Inter的服务器产品和AMD 的平台上普遍实现40位的最高物理地址，可寻址达1TB；
+- 当MAXPHYADDR为52位，这是x64体系结构描述最高实现值，目前尚未有处理器实现。
 
 而对下级表的物理地址的存储4K页面寻址遵循如下规则：
+
 ① 当MAXPHYADDR为52位时，上一级table entry的`12~51`位提供下一级table物理基地址的高40位，低12位补零，达到基地址在4K边界对齐；
+
 ② 当MAXPHYADDR为40位时，上一级table entry的`12~39`位提供下一级table物理基地址的高28位，此时`40~51`是保留位，必须置0，低12位补零，达到基地址在4K边界对齐；
+
 ③ 当MAXPHYADDR为36位时，上一级table entry的`12~35`位提供下一级table物理基地址的高24位，此时`36~51`是保留位，必须置0，低12位补零，达到基地址在4K边界对齐。
 
 而MAXPHYADDR为36位正是普通32位机的PAE模式。
@@ -201,8 +204,9 @@ int kvm_mmu_create(struct kvm_vcpu *vcpu)
 
         vcpu->arch.mmu = &vcpu->arch.root_mmu;
         vcpu->arch.walk_mmu = &vcpu->arch.root_mmu;
-
+        // 存储paging structure中根目录的地址(如EPT中的EPTP), 这是HPA
         vcpu->arch.root_mmu.root_hpa = INVALID_PAGE;
+        // 虚拟机本身页表的cr3地址, GPA
         vcpu->arch.root_mmu.root_cr3 = 0;
         vcpu->arch.root_mmu.translate_gpa = translate_gpa;
         for (i = 0; i < KVM_MMU_NUM_PREV_ROOTS; i++)
@@ -215,11 +219,11 @@ int kvm_mmu_create(struct kvm_vcpu *vcpu)
                 vcpu->arch.guest_mmu.prev_roots[i] = KVM_MMU_ROOT_INFO_INVALID;
 
         vcpu->arch.nested_mmu.translate_gpa = translate_nested_gpa;
-
+        // guest_mmu是嵌套的情况下, L1虚拟机mmu
         ret = alloc_mmu_pages(vcpu, &vcpu->arch.guest_mmu);
         if (ret)
                 return ret;
-
+        // 非嵌套情况下的虚拟机MMU
         ret = alloc_mmu_pages(vcpu, &vcpu->arch.root_mmu);
         if (ret)
                 goto fail_allocate_root;
@@ -246,7 +250,7 @@ static int alloc_mmu_pages(struct kvm_vcpu *vcpu, struct kvm_mmu *mmu)
          */
         if (tdp_enabled && kvm_x86_ops->get_tdp_level(vcpu) > PT32E_ROOT_LEVEL)
                 return 0;
-
+        // 分配内存
         page = alloc_page(GFP_KERNEL_ACCOUNT | __GFP_DMA32);
         if (!page)
                 return -ENOMEM;
@@ -262,7 +266,7 @@ static int alloc_mmu_pages(struct kvm_vcpu *vcpu, struct kvm_mmu *mmu)
 该函数指定了`arch.walk_mmu`就是arch.mmu的地址，在KVM MMU相关的代码中经常会把`arch.walk_mmu`和`arch.mmu`混用，在这里指定了他们其实是一回事。
 
 
-### 3.2.2. MMU的初始化: 回调函数初始化
+### 3.2.2. MMU的初始化: vcpu->arch.mmu
 
 `kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` --> `kvm_arch_vcpu_create()` --> `kvm_init_mmu()`:
 
@@ -449,6 +453,7 @@ int kvm_mmu_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa, u64 error_code,
         // mmio 引起的, 其实从上面的路径走不到这里, 而是从 handle_ept_misconfig()过来
         // 关于 mmio , 见io部分
         if (unlikely(error_code & PFERR_RSVD_MASK)) {
+                // mmio pagefault的处理
                 r = handle_mmio_page_fault(vcpu, cr2_or_gpa, direct);
                 if (r == RET_PF_EMULATE)
                         goto emulate;
@@ -510,6 +515,9 @@ emulate:
 EXPORT_SYMBOL_GPL(kvm_mmu_page_fault);
 ```
 
+首先就判断**本次exit**是否是**MMIO**引起的，如果是，则调用`handle_mmio_page_fault`函数处理MMIO pagefault,具体为何这么判断**可参考intel手册**。然后调用mmu_topup_memory_caches函数进行缓存池的分配，官方的解释是为了避免在运行时分配空间失败，这里提前分配浩足额的空间，便于运行时使用。该部分内容最后单独详解。然后调用mapping_level_dirty_bitmap函数判断当前gfn对应的slot是否可用，当然绝大多数情况下是可用的。为什么要进行这样的判断呢？在if内部可以看到是获取level，如果当前GPN对应的slot可用，我们就可以获取分配slot的pagesize，然后得到最低级的level，比如如果是2M的页，那么level就为2，为4K的页，level就为1.
+
+
 ```cpp
 static inline int kvm_mmu_do_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa,
                                         u32 err, bool prefault)
@@ -554,7 +562,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
         bool exec = error_code & PFERR_FETCH_MASK;
         bool lpage_disallowed = exec && is_nx_huge_page_enabled();
         bool map_writable;
-        // 物理地址右移12位得到物理页框号(相对于虚拟机而言)
+        // 虚拟机物理地址右移12位得到虚拟机物理页框号(相对于虚拟机而言)
         gfn_t gfn = gpa >> PAGE_SHIFT;
         unsigned long mmu_seq;
         kvm_pfn_t pfn;
@@ -575,7 +583,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
 
         mmu_seq = vcpu->kvm->mmu_notifier_seq;
         smp_rmb();
-        /*得到PFN */
+        // 得到PFN
         if (try_async_pf(vcpu, prefault, gfn, gpa, &pfn, write, &map_writable))
                 return RET_PF_RETRY;
         // 处理反常的物理页框
