--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -430,7 +430,7 @@ static int handle_ept_violation(struct kvm_vcpu *vcpu)
 
         error_code |= (exit_qualification & 0x100) != 0 ?
                PFERR_GUEST_FINAL_MASK : PFERR_GUEST_PAGE_MASK;
-
+        // exit明细信息
         vcpu->arch.exit_qualification = exit_qualification;
         return kvm_mmu_page_fault(vcpu, gpa, error_code, NULL, 0);
 }
