--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -141,6 +141,7 @@ static __init int hardware_setup(void)
                 !cpu_has_vmx_invept_global())
                 enable_ept = 0;
         if (!enable_ept)
+                // ept没有启用, 0
                 ept_lpage_level = 0;
         else if (cpu_has_vmx_ept_1g_page())
                 // 支持1G大页, 3
@@ -361,7 +362,7 @@ static void init_kvm_tdp_mmu(struct kvm_vcpu *vcpu)
 
 下面借助于KVM源代码分析下**EPT的构建过程**，其构建模式和普通页表一样，属于**中断触发式**。即**初始页表是空的**，只有在**访问未命中**的时候**引发缺页中断**，然后缺页处理程序**构建页表**。
 
-```
+```cpp
 vmx_handle_exit()  // vmxexit的入口
  ├─ kvm_vmx_exit_handlers[exit_reason](vcpu);      // 调用对应函数
  |   ├─ handle_ept_violation()   // ept violation异常的处理
@@ -371,7 +372,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |─ kvm_mmu_page_fault(vcpu, gpa, error_code, NULL, 0);   // 处理page fault异常
  |   |   |   ├─ kvm_mmu_do_page_fault(vcpu, cr2_or_gpa, lower_32_bits(error_code), false); // 处理内存访问异常, mmio的见io部分
  |   |   |       └─ vcpu->arch.mmu->page_fault(vcpu, cr2_or_gpa, err, prefault);   // EPT下会调用kvm_tdp_page_fault
- |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 分配内存
+ |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
 **初始状态EPT页表为空**，当**客户机运行**时，其使用的**GVA转化成GPA**后，还需要CPU根据**GPA查找EPT**，从而**定位具体的HPA**，但是由于此时**EPT为空**，所以会引发**缺页中断**，发生**VM-exit**, 此时**CPU进入到根模式**，运行VMM（这里指KVM），进入`vmx_handle_exit`函数, 在KVM中定义了一个**异常处理数组**来处理**对应的VM-exit**
@@ -610,6 +611,9 @@ out_unlock:
 ```
 
 调用`mmu_topup_memory_caches`函数进行缓存池的分配，官方的解释是为了避免在运行时分配空间失败，这里提前分配浩足额的空间，便于运行时使用。该部分内容最后单独详解。
+
+然后调用`mapping_level_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
+
 
 
 
