--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -169,6 +169,8 @@ void kvm_configure_mmu(bool enable_tdp, int tdp_page_level)
          */
         if (tdp_enabled)
                 // 1G大页, 3
+                // 2M大页, 2
+                // 4K页面, 1
                 max_page_level = tdp_page_level;
         else if (boot_cpu_has(X86_FEATURE_GBPAGES))
                 max_page_level = PT_PDPE_LEVEL;
