--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -1,16 +1,26 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
-# QEMU中物理内存的注册
+<!-- code_chunk_output -->
+
+- [1. QEMU中物理内存的注册](#1-qemu中物理内存的注册)
+- [2. 处理用户态虚拟地址](#2-处理用户态虚拟地址)
+- [3. KVM同步脏页位图到Qemu](#3-kvm同步脏页位图到qemu)
+- [4. EPT页表映射](#4-ept页表映射)
+
+<!-- /code_chunk_output -->
+
+# 1. QEMU中物理内存的注册
 
 通过`kvm_vm_ioctl(KVM_SET_USER_MEMORY_REGION)`实现
 
 本质是创建并填充了一个临时kvm_memslots结构，并把其赋值给kvm->memslots（全局的）。
 
-# 处理用户态虚拟地址
+# 2. 处理用户态虚拟地址
 
 https://blog.csdn.net/jinzhuojun/article/details/8147463
 
-# KVM同步脏页位图到Qemu
+# 3. KVM同步脏页位图到Qemu
 
 https://frankjkl.github.io/2019/04/07/QemuKVM-Qemu%E5%90%8C%E6%AD%A5KVM%E8%84%8F%E9%A1%B5%E4%BD%8D%E5%9B%BE/
 
@@ -18,7 +28,7 @@ https://frankjkl.github.io/2019/04/07/QemuKVM-Qemu%E5%90%8C%E6%AD%A5KVM%E8%84%8F
 
 插播qemu对内存条的模拟管理，是通过`RAMBlock`和`ram_list`管理的，**RAMBlock**就是**每次申请的内存池**，`ram_list`则是RAMBlock的**链表**，他们结构如下：
 
-# EPT页表映射
+# 4. EPT页表映射
 
 内存的添加说完了，看一下[EPT页表](http://www.oenhan.com/kernel-program-exec)的映射，在`kvm_arch_vcpu_setup`中有`kvm_mmu_setup`，是mmu的初始化，EPT的初始化是`init_kvm_tdp_mmu`，所谓的初始化就是填充了`vcpu->arch.mmu`结构体，里面有很多回调函数都会用到，最终的是`tdp_page_fault`。
 
