--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -443,6 +443,20 @@ static int handle_ept_violation(struct kvm_vcpu *vcpu)
 
 ```cpp
 // arch/x86/kvm/mmu/mmu.c
+/*
+ * Return values of handle_mmio_page_fault and mmu.page_fault:
+ * RET_PF_RETRY: let CPU fault again on the address.
+ * RET_PF_EMULATE: mmio page fault, emulate the instruction directly.
+ *
+ * For handle_mmio_page_fault only:
+ * RET_PF_INVALID: the spte is invalid, let the real page fault path update it.
+ */
+enum {
+        RET_PF_RETRY = 0,
+        RET_PF_EMULATE = 1,
+        RET_PF_INVALID = 2,
+};
+
 int kvm_mmu_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa, u64 error_code,
                        void *insn, int insn_len)
 {
@@ -458,16 +472,18 @@ int kvm_mmu_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa, u64 error_code,
         if (unlikely(error_code & PFERR_RSVD_MASK)) {
                 // mmio pagefault的处理
                 r = handle_mmio_page_fault(vcpu, cr2_or_gpa, direct);
+                // mmio page fault, 直接进行指令模拟
                 if (r == RET_PF_EMULATE)
                         goto emulate;
         }
         // 处理内存访问异常
         if (r == RET_PF_INVALID) {
+                // spte(影子页表项/EPT页表项)无效
                 r = kvm_mmu_do_page_fault(vcpu, cr2_or_gpa,
                                           lower_32_bits(error_code), false);
                 WARN_ON(r == RET_PF_INVALID);
         }
-
+        // 再次fault
         if (r == RET_PF_RETRY)
                 return 1;
         if (r < 0)
@@ -518,10 +534,9 @@ emulate:
 EXPORT_SYMBOL_GPL(kvm_mmu_page_fault);
 ```
 
-首先就判断**本次exit**是否是**MMIO**引起的，如果是，则调用`handle_mmio_page_fault`函数处理MMIO pagefault,具体为何这么判断**可参考intel手册**。
+首先就判断**本次exit**是否是**MMIO**引起的，如果是，则调用`handle_mmio_page_fault`函数处理MMIO pagefault,具体为何这么判断**可参考intel手册**, mmio的fault处理见io部分.
 
-
-
+针对SPTE invalid
 
 ```cpp
 static inline int kvm_mmu_do_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa,
