--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
@@ -84,6 +84,9 @@
 
 EPT 技术在**原有客户机页表**对**客户机虚拟地址**到**客户机物理地址映射**的基础上，又引入了 **EPT 页表**来实现**客户机物理地址**到**宿主机物理地址**的另一次映射，这**两次地址映射**都是由**硬件自动完成**。
 
+- Guest维护自身的客户页表:GVA->GPA
+- EPT维护GPA->HPA的映射
+
 **客户机运行**时，**客户机页表**被载入 **物理CR3**，而 **EPT 页表**被载入专门的 **EPT 页表指针寄存器 EPTP**。**EPT 页表对地址的映射机理**与**客户机页表对地址的映射机理相同**，下图 4 出示了一个页面大小为 4K 的映射过程：
 
 ![config](./images/4.png)
