--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -536,7 +536,7 @@ EXPORT_SYMBOL_GPL(kvm_mmu_page_fault);
 
 首先就判断**本次exit**是否是**MMIO**引起的，如果是，则调用`handle_mmio_page_fault`函数处理MMIO pagefault,具体为何这么判断**可参考intel手册**, mmio的fault处理见io部分.
 
-针对SPTE invalid
+针对SPTE invalid(shadow/EPT 页表项无效), 调用`kvm_mmu_do_page_fault`
 
 ```cpp
 static inline int kvm_mmu_do_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa,
@@ -557,7 +557,7 @@ int kvm_tdp_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
                        bool prefault)
 {
         int max_level;
-
+        // 从 3 开始, 大于1, 也就是3和2
         for (max_level = PT_MAX_HUGEPAGE_LEVEL;
              max_level > PT_PAGE_TABLE_LEVEL;
              max_level--) {
